# Analytics-Agent

./: README.md  pyproject.toml
Analytics_agent/: agent.py
Analytics_agent/sub_agents/: __init__.py
Analytics_agent/sub_agents/reporting/: agent.py  prompts.py
Analytics_agent/utils/: utils.py
deployment/: analytics_agent-0.1-py3-none-any.whl  deploy.py
